src/objects/Student_Course__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students_Courses</relationshipLabel>
        <relationshipName>Students_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admission_Date__c</fullName>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <formula>Total_Amount__c -  Received_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Account_Fees__c</fullName>
        <label>Course_Account_Fees</label>
        <referenceTo>Course_Account_Fees__c</referenceTo>
        <relationshipLabel>Students_Courses</relationshipLabel>
        <relationshipName>Students_Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course_Account</label>
        <referenceTo>Course_Account__c</referenceTo>
        <relationshipLabel>Students_Courses</relationshipLabel>
        <relationshipName>Students_Courses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Payment__c</fullName>
        <label>Last Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Amount__c</fullName>
        <label>Received Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Students_Courses</relationshipLabel>
        <relationshipName>Students_Courses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Course_Account_Fees__r.Course_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Student_Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student_Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students_Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>